# autohero

./: .gitignore  .gitlab-ci.yml
anchor/: Anchor.toml  Makefile  package-lock.json  package.json  storage.txt
anchor/pre/: program-keypair.json
anchor/scripts/: add_event.ts  apply_event.ts  constants.ts  events.ts  (+4 more)
app/: Dockerfile  Makefile  add_event.py  chain.py  config.py  datatypes.py  main.py  metadata.py  models.py  pyproject.toml  scheduler.py  sentry.py  solana_utils.py  wallet.json
app/alembic/: env.py
app/alembic/versions/: 2024_04_01_2302-81332c851faa_init.py  2024_04_04_0043-d3dd5092db04_add_storage_id.py  2024_04_04_0059-b0b734094873_add_description.py  2024_04_04_2228-b93ea92001be_add_hero_table.py  2024_04_05_0010-3822c8b4872f_add_event_tx.py  2024_04_05_0016-4d6024afc62f_change_time.py  2024_04_05_2258-eec1829bef43_add_hero_event.py  2025_04_27_1626-9df01ed52b9e_add_hero_event.py  2025_04_27_1627-ff81a68e91a1_add_event_choices.py  2025_05_05_1818-182322088ad5_add_extra_fields.py
app/autohero/: program_id.py
app/autohero/accounts/: __init__.py  event_storage.py  hero.py
app/autohero/errors/: custom.py
app/autohero/instructions/: __init__.py  add_event.py  apply_event.py  info.py  initialize.py  initialize_storage.py
app/autohero/types/: __init__.py  event.py
app/db/: base.py  helpers.py
app/routers/: __init__.py  event.py  hero.py
src/: .gitignore  index.html  package-lock.json  package.json
web/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1744875544676-3ff1129d1543c.mjs
(+63 files in other folders)
