[tool.poetry]
name = "autohero"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.16"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
sentry-sdk = "^1.44.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
anchorpy = {extras = ["cli", "pytest"], version = "^0.20.0"}
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
