[tool.poetry]
name = "autohero"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.24"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
alembic = "^1.15.2"
pydantic-settings = "^2.8.1"
psycopg2-binary = "^2.9.10"
sentry-sdk = "^2.26.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
anchorpy = {extras = ["cli", "pytest"], version = "^0.21.0"}
langchain = "^0.3.23"
langchain-openai = "^0.3.12"
apscheduler = "^3.11.0"
solana = "^0.36.6"
solders = "^0.26.0"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
